# WebServer

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  Server  cmake_install.cmake  log.txt
Web/: index1.html  index2.html
include/: ThreadProc.h
src/: main.cpp
